# serenity

./: README.md  cpan-dependencies.list  generated-sources.json  meson.build  org.gnome.Example.json
2d/: camera.cpp  meson.build  painter.cpp  platformerphysics.cpp  sprite.cpp  transform.cpp
2d/include/serenity/: 2d.hpp
2d/include/serenity/2d/: camera.hpp  painter.hpp  platformerphysics.hpp  sprite.hpp  transform.hpp
core/: entity.cpp
core/include/serenity/: component.hpp  entity.hpp  math.hpp
core/include/serenity/math/: vec.hpp
core/include/serenity/time/: ontick.hpp  timersystem.hpp
example/: main.cpp  meson.build
example-launcher/: main.js  main.pl  meson.build
examples/: meson.build
examples/camera/: main.cpp  meson.build  smiley.hpp
examples/dontlookback/: collectible.hpp  generator.hpp  main.cpp  meson.build  player.hpp  tile.hpp
examples/input/: main.cpp  meson.build  smiley.hpp
examples/launcher/: main.pl
examples/lettuce/: main.cpp  meson.build
graphics/: renderer.cpp
graphics/include/serenity/graphics/: renderer.hpp
input/: meson.build
input/include/serenity/: input.hpp
input/include/serenity/input/: keyboard.hpp
modules/: SDL3.json  SDL3_image.json  SDL3_ttf.json  catch2.json
modules/lua5.4/: lua-5.4.json
modules/sol2/: emptymacro_sol2.patch  sol2.json
runtime/: main.cpp  meson.build  runtime_test.lua  usertypes.hpp
runtime/types/: 2d.hpp  core.hpp  graphics.hpp  input.hpp  math.hpp
src/: meson.build
src/include/serenity/: core.hpp
src/include/serenity/time/: ontick.hpp  (+1 more)
src/time/: ontick.cpp
